Segunda versão: Sobre mim

--- a/aulagiitt.html
+++ b/aulagiitt.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio</title>
-    <h1>Bem-vindo ao meu portfolio</h1>
-    <p>oiii</p>
+    <title>Portfólio - Camila Guimarães</title>
 </head>
 <body>
+    <center>
+        <h1 style="background-color:rgb(118, 173, 245);">Portfólio da desenvolvedora</h1>
+    </center>
+    <h2>Sobre mim</h2>
+    <p>Olá! Me chamo Camila Guimarães e sou uma desenvolvedora iniciante que está sempre em busca de novos desafios. Tenho experiência em várias tecnologias e adoro trabalhar em equipe para construir produtos incríveis.</p>
     
 </body>
 </html>
