Quarta versão - Até aqui eu adicionei minhas habilidades no front-end, back-end e outras ferramentas utilizando o conhecimento de html em lihas não ordenadas.

--- a/aulagiitt.html
+++ b/aulagiitt.html
@@ -11,6 +11,23 @@
     </center>
     <h2>Sobre mim</h2>
     <p>Olá! Me chamo Camila Guimarães e sou uma desenvolvedora iniciante que está sempre em busca de novos desafios. Tenho experiência em várias tecnologias e adoro trabalhar em equipe para construir produtos incríveis.</p>
-    
+    <h2>Habilidades</h2>
+    <h3>Front-end</h3>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+      </ul>  
+      <h3>Back-end</h3>
+    <ul>
+        <li>Portugol</li>
+        <li>Linguagem C</li>
+      </ul>  
+      <h3>Ferramentas</h3>
+    <ul>
+        <li>Figma</li>
+        <li>VS Code</li>
+        <li>GitHub</li>
+      </ul>  
+
 </body>
 </html>
