Quinta versão - Adicionei a área de projetos recentes e disponibilizei o acesso a atividade anterior Portfólio Loja TechShop

--- a/aulagiitt.html
+++ b/aulagiitt.html
@@ -4,30 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - Camila Guimarães</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+    body{
+        font-family:'work sans';
+        background-color: rgb(202, 238, 204);
+    }
+    </style>
 </head>
 <body>
     <center>
-        <h1 style="background-color:rgb(118, 173, 245);">Portfólio da desenvolvedora</h1>
+        <h1 style="background-color:rgb(139, 185, 137);">Portfólio da desenvolvedora</h1>
     </center>
     <h2>Sobre mim</h2>
     <p>Olá! Me chamo Camila Guimarães e sou uma desenvolvedora iniciante que está sempre em busca de novos desafios. Tenho experiência em várias tecnologias e adoro trabalhar em equipe para construir produtos incríveis.</p>
     <h2>Habilidades</h2>
-    <h3>Front-end</h3>
+    <h3>Front-end:</h3>
     <ul>
         <li>HTML</li>
         <li>CSS</li>
       </ul>  
-      <h3>Back-end</h3>
+      <h3>Back-end:</h3>
     <ul>
         <li>Portugol</li>
         <li>Linguagem C</li>
       </ul>  
-      <h3>Ferramentas</h3>
+      <h3>Ferramentas:</h3>
     <ul>
         <li>Figma</li>
         <li>VS Code</li>
         <li>GitHub</li>
       </ul>  
-
+    <h2>Projeto recente</h2>
+    <h3>Portfólio Loja TechShop</h3>
+    <p>Este é um portfólio simples para uma empresa apresentar seus produtos aos clientes.</p>
+      <a href="https://drive.google.com/file/d/1YcN0pkkh2YRKjIoWKOrS4c66VXnx-ZVg/view?usp=sharing">Aperte aqui para vizualizar</a>
 </body>
 </html>
